// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spreadsheet Functions [AVERAGEIFS 4] =AVERAGEIFS(#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >3) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "AVERAGEIFS",
    "errors": Array [],
    "type": "any",
    "value": "AVERAGEIFS",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "GreaterThan",
    "display": ">",
    "errors": Array [],
    "type": "any",
    "value": ">",
  },
  Object {
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "type": "number",
    "value": "3",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [AVERAGEIFS 100] =AVERAGEIFS(#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >100) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "AVERAGEIFS",
    "errors": Array [],
    "type": "any",
    "value": "AVERAGEIFS",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "GreaterThan",
    "display": ">",
    "errors": Array [],
    "type": "any",
    "value": ">",
  },
  Object {
    "code": "NumberLiteral",
    "display": "100",
    "errors": Array [],
    "type": "number",
    "value": "100",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [COLUMN_COUNT] =#28e28190-63bd-4f70-aeca-26e72574c01a.COLUMN_COUNT() 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Function",
    "display": "COLUMN_COUNT",
    "errors": Array [],
    "type": "any",
    "value": "COLUMN_COUNT",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [COUNTA] =#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.COUNTA() 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Function",
    "display": "COUNTA",
    "errors": Array [],
    "type": "any",
    "value": "COUNTA",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [COUNTA] =#28e28190-63bd-4f70-aeca-26e72574c01a.2723b7d9-22ce-4d93-b2ef-7cce1b122d64.COUNTA() 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "third",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "2723b7d9-22ce-4d93-b2ef-7cce1b122d64",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Function",
    "display": "COUNTA",
    "errors": Array [],
    "type": "any",
    "value": "COUNTA",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [COUNTIFS =1] =COUNTIFS(#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, 3) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "COUNTIFS",
    "errors": Array [],
    "type": "any",
    "value": "COUNTIFS",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "type": "number",
    "value": "3",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [COUNTIFS >2] =COUNTIFS(#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, >2) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "COUNTIFS",
    "errors": Array [],
    "type": "any",
    "value": "COUNTIFS",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "GreaterThan",
    "display": ">",
    "errors": Array [],
    "type": "any",
    "value": ">",
  },
  Object {
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "type": "number",
    "value": "2",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [MAX] =#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.MAX() 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Function",
    "display": "MAX",
    "errors": Array [],
    "type": "any",
    "value": "MAX",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [SUM] =#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.SUM() 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Function",
    "display": "SUM",
    "errors": Array [],
    "type": "any",
    "value": "SUM",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [SUMIFS >3] =SUMIFS(#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >3) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "SUMIFS",
    "errors": Array [],
    "type": "any",
    "value": "SUMIFS",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "GreaterThan",
    "display": ">",
    "errors": Array [],
    "type": "any",
    "value": ">",
  },
  Object {
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "type": "number",
    "value": "3",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [SUMIFS 4] =SUMIFS(#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28, 4) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "SUMIFS",
    "errors": Array [],
    "type": "any",
    "value": "SUMIFS",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "NumberLiteral",
    "display": "4",
    "errors": Array [],
    "type": "number",
    "value": "4",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [SUMPRODUCT] =SUMPRODUCT(#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "SUMPRODUCT",
    "errors": Array [],
    "type": "any",
    "value": "SUMPRODUCT",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([]).toArray() 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "Spreadsheet",
    "errors": Array [],
    "type": "any",
    "value": "Spreadsheet",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "LBracket",
    "display": "[",
    "errors": Array [],
    "type": "any",
    "value": "[",
  },
  Object {
    "code": "RBracket",
    "display": "]",
    "errors": Array [],
    "type": "any",
    "value": "]",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "Spreadsheet",
    "value": ")",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Function",
    "display": "toArray",
    "errors": Array [],
    "type": "any",
    "value": "toArray",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "Array",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([]).toArray() 2`] = `
Array [
  Object {
    "result": Array [
      Object {
        "result": "Column1",
        "type": "string",
      },
      Object {
        "result": "Column2",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "1",
        "type": "string",
      },
      Object {
        "result": "2",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "3",
        "type": "string",
      },
      Object {
        "result": "4",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([{a: 1}, {a: 2}]).toArray() 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "Spreadsheet",
    "errors": Array [],
    "type": "any",
    "value": "Spreadsheet",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "LBracket",
    "display": "[",
    "errors": Array [],
    "type": "any",
    "value": "[",
  },
  Object {
    "code": "LBrace",
    "display": "{",
    "errors": Array [],
    "type": "any",
    "value": "{",
  },
  Object {
    "code": "FunctionName",
    "display": "a",
    "errors": Array [],
    "type": "string",
    "value": "a",
  },
  Object {
    "code": "Colon",
    "display": ":",
    "errors": Array [],
    "type": "any",
    "value": ":",
  },
  Object {
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "type": "number",
    "value": "1",
  },
  Object {
    "code": "RBrace",
    "display": "}",
    "errors": Array [],
    "type": "any",
    "value": "}",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "LBrace",
    "display": "{",
    "errors": Array [],
    "type": "any",
    "value": "{",
  },
  Object {
    "code": "FunctionName",
    "display": "a",
    "errors": Array [],
    "type": "string",
    "value": "a",
  },
  Object {
    "code": "Colon",
    "display": ":",
    "errors": Array [],
    "type": "any",
    "value": ":",
  },
  Object {
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "type": "number",
    "value": "2",
  },
  Object {
    "code": "RBrace",
    "display": "}",
    "errors": Array [],
    "type": "any",
    "value": "}",
  },
  Object {
    "code": "RBracket",
    "display": "]",
    "errors": Array [],
    "type": "any",
    "value": "]",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "Spreadsheet",
    "value": ")",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Function",
    "display": "toArray",
    "errors": Array [],
    "type": "any",
    "value": "toArray",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "Array",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([{a: 1}, {a: 2}]).toArray() 2`] = `
Array [
  Object {
    "result": Array [
      Object {
        "result": "a",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "1",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "2",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([1,2,3]).toArray() 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "Spreadsheet",
    "errors": Array [],
    "type": "any",
    "value": "Spreadsheet",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "LBracket",
    "display": "[",
    "errors": Array [],
    "type": "any",
    "value": "[",
  },
  Object {
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "type": "number",
    "value": "1",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "type": "number",
    "value": "2",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "type": "number",
    "value": "3",
  },
  Object {
    "code": "RBracket",
    "display": "]",
    "errors": Array [],
    "type": "any",
    "value": "]",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "Spreadsheet",
    "value": ")",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Function",
    "display": "toArray",
    "errors": Array [],
    "type": "any",
    "value": "toArray",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "Array",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([1,2,3]).toArray() 2`] = `"Spreadsheet type unmatched: number"`;

exports[`Spreadsheet Functions [VLOOKUP 2 range default] =VLOOKUP("2", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "VLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "VLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "StringLiteral",
    "display": "\\"2\\"",
    "errors": Array [],
    "type": "string",
    "value": "\\"2\\"",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP 2 range true] =VLOOKUP("2", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28, true) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "VLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "VLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "StringLiteral",
    "display": "\\"2\\"",
    "errors": Array [],
    "type": "string",
    "value": "\\"2\\"",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [],
    "type": "boolean",
    "value": "true",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP Column check] =VLOOKUP("", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "VLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "VLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "StringLiteral",
    "display": "\\"\\"",
    "errors": Array [],
    "type": "string",
    "value": "\\"\\"",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP Not found 2 range false] =VLOOKUP("2", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28, false) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "VLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "VLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "StringLiteral",
    "display": "\\"2\\"",
    "errors": Array [],
    "type": "string",
    "value": "\\"2\\"",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "BooleanLiteral",
    "display": "false",
    "errors": Array [],
    "type": "boolean",
    "value": "false",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP Not found] =VLOOKUP("", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "VLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "VLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "StringLiteral",
    "display": "\\"\\"",
    "errors": Array [],
    "type": "string",
    "value": "\\"\\"",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP ok number] =VLOOKUP(1, #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "VLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "VLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "type": "number",
    "value": "1",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP ok number] =VLOOKUP(1, #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28, false) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "VLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "VLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "type": "number",
    "value": "1",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "BooleanLiteral",
    "display": "false",
    "errors": Array [],
    "type": "boolean",
    "value": "false",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP ok number] =VLOOKUP(1, #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28, true) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "VLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "VLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "type": "number",
    "value": "1",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [],
    "type": "boolean",
    "value": "true",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP ok string] =VLOOKUP("1", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "VLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "VLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "StringLiteral",
    "display": "\\"1\\"",
    "errors": Array [],
    "type": "string",
    "value": "\\"1\\"",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [XLOOKUP ok string] =XLOOKUP("1", #28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "XLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "XLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "StringLiteral",
    "display": "\\"1\\"",
    "errors": Array [],
    "type": "string",
    "value": "\\"1\\"",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [XLOOKUP ok string] =XLOOKUP("123", #28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28, "100") 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Function",
    "display": "XLOOKUP",
    "errors": Array [],
    "type": "any",
    "value": "XLOOKUP",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "StringLiteral",
    "display": "\\"123\\"",
    "errors": Array [],
    "type": "string",
    "value": "\\"123\\"",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "code": "StringLiteral",
    "display": "\\"100\\"",
    "errors": Array [],
    "type": "string",
    "value": "\\"100\\"",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "string",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [column] =#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
]
`;

exports[`Spreadsheet Functions [exactin column true] ="foo" in #28e28190-63bd-4f70-aeca-26e72574c01a.2723b7d9-22ce-4d93-b2ef-7cce1b122d64 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "StringLiteral",
    "display": "\\"foo\\"",
    "errors": Array [],
    "type": "string",
    "value": "\\"foo\\"",
  },
  Object {
    "code": "In",
    "display": "in",
    "errors": Array [],
    "type": "any",
    "value": "in",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "third",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "2723b7d9-22ce-4d93-b2ef-7cce1b122d64",
  },
]
`;

exports[`Spreadsheet Functions [in column false] =4 in #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "NumberLiteral",
    "display": "4",
    "errors": Array [],
    "type": "number",
    "value": "4",
  },
  Object {
    "code": "In",
    "display": "in",
    "errors": Array [],
    "type": "any",
    "value": "in",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
]
`;

exports[`Spreadsheet Functions [in column true] =3 in #28e28190-63bd-4f70-aeca-26e72574c01a.4e6f9adb-6f33-454e-9f9e-635dc98e3f28 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "type": "number",
    "value": "3",
  },
  Object {
    "code": "In",
    "display": "in",
    "errors": Array [],
    "type": "any",
    "value": "in",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Column",
    "display": "second",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Column",
    "value": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
  },
]
`;

exports[`Spreadsheet Functions [in spreadsheet false] =4 in #28e28190-63bd-4f70-aeca-26e72574c01a 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "NumberLiteral",
    "display": "4",
    "errors": Array [],
    "type": "number",
    "value": "4",
  },
  Object {
    "code": "In",
    "display": "in",
    "errors": Array [],
    "type": "any",
    "value": "in",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
]
`;

exports[`Spreadsheet Functions [in spreadsheet true] =3 in #28e28190-63bd-4f70-aeca-26e72574c01a 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "type": "number",
    "value": "3",
  },
  Object {
    "code": "In",
    "display": "in",
    "errors": Array [],
    "type": "any",
    "value": "in",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
]
`;

exports[`Spreadsheet Functions [toArray] =#28e28190-63bd-4f70-aeca-26e72574c01a.toArray() 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Function",
    "display": "toArray",
    "errors": Array [],
    "type": "any",
    "value": "toArray",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "Array",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [toArray] =#28e28190-63bd-4f70-aeca-26e72574c01a.toArray() 2`] = `
Array [
  Object {
    "result": Array [
      Object {
        "result": "first",
        "type": "string",
      },
      Object {
        "result": "second",
        "type": "string",
      },
      Object {
        "result": "third",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "1",
        "type": "string",
      },
      Object {
        "result": "2",
        "type": "string",
      },
      Object {
        "result": "3",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "3",
        "type": "string",
      },
      Object {
        "result": "4",
        "type": "string",
      },
      Object {
        "result": "",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "5",
        "type": "string",
      },
      Object {
        "result": "6",
        "type": "string",
      },
      Object {
        "result": "Foo",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [toRecordArray] =#28e28190-63bd-4f70-aeca-26e72574c01a.toRecordArray() 1`] = `
Array [
  Object {
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "type": "any",
    "value": ".",
  },
  Object {
    "code": "Function",
    "display": "toRecordArray",
    "errors": Array [],
    "type": "any",
    "value": "toRecordArray",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "Array",
    "value": ")",
  },
]
`;

exports[`Spreadsheet Functions [toRecordArray] =#28e28190-63bd-4f70-aeca-26e72574c01a.toRecordArray() 2`] = `
Array [
  Object {
    "result": Object {
      "first": Object {
        "result": "1",
        "type": "string",
      },
      "second": Object {
        "result": "2",
        "type": "string",
      },
      "third": Object {
        "result": "3",
        "type": "string",
      },
    },
    "subType": "string",
    "type": "Record",
  },
  Object {
    "result": Object {
      "first": Object {
        "result": "3",
        "type": "string",
      },
      "second": Object {
        "result": "4",
        "type": "string",
      },
      "third": Object {
        "result": "",
        "type": "string",
      },
    },
    "subType": "string",
    "type": "Record",
  },
  Object {
    "result": Object {
      "first": Object {
        "result": "5",
        "type": "string",
      },
      "second": Object {
        "result": "6",
        "type": "string",
      },
      "third": Object {
        "result": "Foo",
        "type": "string",
      },
    },
    "subType": "string",
    "type": "Record",
  },
]
`;

exports[`Spreadsheet Functions Spreadsheet Factory 1`] = `
Array [
  Object {
    "columnId": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "index": 0,
    "name": "first",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "columnId": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "index": 1,
    "name": "second",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "columnId": "2723b7d9-22ce-4d93-b2ef-7cce1b122d64",
    "index": 2,
    "name": "third",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
  },
]
`;

exports[`Spreadsheet Functions Spreadsheet Factory 2`] = `
Array [
  Object {
    "rowId": "ec4fdfe8-4a12-4a76-aeae-2dea0229e734",
  },
  Object {
    "rowId": "5d1e4a83-383a-4991-a33c-52a9b3169549",
  },
  Object {
    "rowId": "05f5ae67-b982-406e-a92f-e559c10a7ba6",
  },
]
`;

exports[`Spreadsheet Functions Spreadsheet Factory 3`] = `
Array [
  Array [
    "first",
    "second",
    "third",
  ],
  Array [
    "1",
    "2",
    "3",
  ],
  Array [
    "3",
    "4",
    "",
  ],
  Array [
    "5",
    "6",
    "Foo",
  ],
]
`;

exports[`Spreadsheet Functions Spreadsheet Factory 4`] = `
Array [
  Object {
    "first": Object {
      "result": "1",
      "type": "string",
    },
    "second": Object {
      "result": "2",
      "type": "string",
    },
    "third": Object {
      "result": "3",
      "type": "string",
    },
  },
  Object {
    "first": Object {
      "result": "3",
      "type": "string",
    },
    "second": Object {
      "result": "4",
      "type": "string",
    },
    "third": Object {
      "result": "",
      "type": "string",
    },
  },
  Object {
    "first": Object {
      "result": "5",
      "type": "string",
    },
    "second": Object {
      "result": "6",
      "type": "string",
    },
    "third": Object {
      "result": "Foo",
      "type": "string",
    },
  },
]
`;

exports[`Spreadsheet Functions completion 1`] = `
Object {
  "codeFragment": Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "any",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  "kind": "spreadsheet",
  "name": "MySpreadsheet",
  "namespace": "28e28190-63bd-4f70-aeca-26e72574c01a",
  "positionChange": 37,
  "preview": SpreadsheetClass {
    "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "dynamic": false,
    "listCells": [Function],
    "listColumns": [Function],
    "listRows": [Function],
    "name": [Function],
  },
  "renderDescription": [Function],
  "replacements": Array [
    "MySpreadsheet",
  ],
  "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  "weight": 10,
}
`;

exports[`Spreadsheet Functions completion 2`] = `
Object {
  "codeFragment": Object {
    "code": "Function",
    "display": "SUM()",
    "errors": Array [],
    "type": "any",
    "value": "SUM()",
  },
  "kind": "function",
  "name": "SUM",
  "namespace": "core",
  "positionChange": 4,
  "preview": Object {
    "acceptError": false,
    "args": Array [
      Object {
        "name": "column",
        "type": "Column",
      },
    ],
    "async": false,
    "chain": true,
    "description": "Returns the sum of the column in the spreadsheet.",
    "effect": false,
    "examples": Array [
      Object {
        "codeFragments": Array [
          Object {
            "code": "Equal",
            "display": "=",
            "errors": Array [],
            "type": "any",
            "value": "=",
          },
          Object {
            "code": "NumberLiteral",
            "display": "123",
            "errors": Array [],
            "type": "number",
            "value": "123",
          },
        ],
        "input": "=123",
        "output": Object {
          "result": 123,
          "type": "number",
        },
      },
    ],
    "group": "core",
    "key": "SUM",
    "lazy": false,
    "name": "SUM",
    "pure": false,
    "reference": [Function],
    "returns": "number",
    "testCases": Array [],
  },
  "renderDescription": [Function],
  "replacements": Array [
    "SUM",
  ],
  "value": "SUM()",
  "weight": 250,
}
`;

exports[`Spreadsheet Functions completion 3`] = `
Object {
  "codeFragment": Object {
    "code": "Column",
    "display": "first",
    "errors": Array [],
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "type": "any",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  "kind": "column",
  "name": "first",
  "namespace": "MySpreadsheet",
  "positionChange": 74,
  "preview": ColumnClass {
    "columnId": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "index": 0,
    "name": "first",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "spreadsheet": SpreadsheetClass {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "dynamic": false,
      "listCells": [Function],
      "listColumns": [Function],
      "listRows": [Function],
      "name": [Function],
    },
  },
  "renderDescription": [Function],
  "replacements": Array [
    "#28e28190-63bd-4f70-aeca-26e72574c01a.first",
    "#28e28190-63bd-4f70-aeca-26e72574c01a.",
    "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "first",
  ],
  "value": "#28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  "weight": 997,
}
`;

exports[`Spreadsheet Functions completion 4`] = `
Object {
  "codeFragment": Object {
    "code": "Function",
    "display": "COLUMN_COUNT()",
    "errors": Array [],
    "type": "any",
    "value": "COLUMN_COUNT()",
  },
  "kind": "function",
  "name": "COLUMN_COUNT",
  "namespace": "core",
  "positionChange": 13,
  "preview": Object {
    "acceptError": false,
    "args": Array [
      Object {
        "name": "spreadsheet",
        "type": "Spreadsheet",
      },
    ],
    "async": false,
    "chain": true,
    "description": "Returns the column size of the spreadsheet.",
    "effect": false,
    "examples": Array [
      Object {
        "codeFragments": Array [
          Object {
            "code": "Equal",
            "display": "=",
            "errors": Array [],
            "type": "any",
            "value": "=",
          },
          Object {
            "code": "NumberLiteral",
            "display": "123",
            "errors": Array [],
            "type": "number",
            "value": "123",
          },
        ],
        "input": "=123",
        "output": Object {
          "result": 123,
          "type": "number",
        },
      },
    ],
    "group": "core",
    "key": "COLUMN_COUNT",
    "lazy": false,
    "name": "COLUMN_COUNT",
    "pure": false,
    "reference": [Function],
    "returns": "number",
    "testCases": Array [],
  },
  "renderDescription": [Function],
  "replacements": Array [
    "COLUMN_COUNT",
  ],
  "value": "COLUMN_COUNT()",
  "weight": 250,
}
`;
